// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page renders when authenticated 1`] = `
<div
  className="makeStyles-mainInner-7"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed makeStyles-appBar-8 MuiAppBar-colorDefault mui-fixed MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular makeStyles-header-9 MuiToolbar-gutters"
    >
      <nav
        className="makeStyles-nav-10"
      >
        <a
          className="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-colorInherit"
          href="/"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <h1
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
          >
            Guild Chat
          </h1>
        </a>
      </nav>
      <div />
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Log In
        </span>
      </button>
    </div>
  </header>
  <main
    className="makeStyles-content-1"
  >
    <div
      className="makeStyles-tagline-2"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root makeStyles-messageIcon-3"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-2 12H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z"
        />
      </svg>
      <div
        className="makeStyles-textContent-4"
      >
        <h2
          className="MuiTypography-root MuiTypography-h3"
        >
          Lightning-fast communication
        </h2>
        <p
          className="MuiTypography-root MuiTypography-h5"
        >
          Connect with your friends at a moment's notice
        </p>
        <a
          aria-disabled={false}
          className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-btn-6 MuiButton-containedPrimary"
          data-testid="getstarted-btn"
          href="/messages"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="MuiButton-label"
          >
            <span
              className="MuiTypography-root MuiTypography-h6"
            >
              Get started
            </span>
          </span>
        </a>
      </div>
    </div>
  </main>
</div>
`;

exports[`Home Page renders when not authenticated 1`] = `
<div
  className="makeStyles-mainInner-7"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed makeStyles-appBar-8 MuiAppBar-colorDefault mui-fixed MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular makeStyles-header-9 MuiToolbar-gutters"
    >
      <nav
        className="makeStyles-nav-10"
      >
        <a
          className="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-colorInherit"
          href="/"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <h1
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
          >
            Guild Chat
          </h1>
        </a>
      </nav>
      <div />
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Log In
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </header>
  <main
    className="makeStyles-content-1"
  >
    <div
      className="makeStyles-tagline-2"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root makeStyles-messageIcon-3"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-2 12H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z"
        />
      </svg>
      <div
        className="makeStyles-textContent-4"
      >
        <h2
          className="MuiTypography-root MuiTypography-h3"
        >
          Lightning-fast communication
        </h2>
        <p
          className="MuiTypography-root MuiTypography-h5"
        >
          Connect with your friends at a moment's notice
        </p>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-btn-6 MuiButton-containedPrimary"
          data-testid="signin-btn"
          disabled={false}
          onBlur={[Function]}
          onClick={[MockFunction]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <span
              className="MuiTypography-root MuiTypography-h6"
            >
              Sign in
            </span>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </main>
</div>
`;
